force-app/main/default/objects/App_Log_Detail__c/App_Log_Detail__c.object-meta.xml
<CustomObject>
    <description>Child object of App log. Capture each log entries for an app log</description>
    <label>App Log Detail</label>
    <nameField>
        <label>App Log Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>App Log Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>