force-app/main/default/objects/App_Log_Detail__c/fields/App_Log__c.field-meta.xml
<CustomField>
    <fullName>App_Log__c</fullName>
    <label>App Log</label>
    <referenceTo>App_Log__c</referenceTo>
    <relationshipLabel>App Log Details</relationshipLabel>
    <relationshipName>App_Log_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>