force-app/main/default/objects/App_Log_Detail__c/fields/Job_Scope__c.field-meta.xml
<CustomField>
    <fullName>Job_Scope__c</fullName>
    <description>Captures the batch job scope, if running a Batch/Queueable apex</description>
    <inlineHelpText>Captures the batch job scope, if running a Batch/Queueable apex</inlineHelpText>
    <label>Job Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>