force-app/main/default/objects/App_Log_Detail__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Captures log message for each log</description>
    <inlineHelpText>Captures log message for each log</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>