force-app/main/default/objects/App_Log_Detail__c/fields/Ref_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Ref_Record_Id__c</fullName>
    <label>Ref Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>