force-app/main/default/objects/App_Log_Detail__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <type>TextArea</type>
</CustomField>